--- a/layouts/shortcodes/text_handwritten.html
+++ b/layouts/shortcodes/text_handwritten.html
@@ -4,7 +4,7 @@ Makes the text looks like it is handwritten animated.
 Arguments:
 text = (string) Text with the glitch effect
 time = (float) The total time for the animation. Default: 5
-font = (int (0,1,2)) 1 = Terminal font, 2 = Pixel art font. Default: 0 (do not change the original font)
+font = (int (0,1,2, 3)) 1 = Terminal font, 2 = Pixel art font, 3 = Handwritten font. Default: 0 (do not change the original font)
 spacing = (float) Space between letters. Default: nil (inherited value)
 rotation = (int) the angle of rotation of the glitch FX (used to glitch the letters). Default 10
 scale = (float) Random variation in the letter's scale. Default 0.0 (no variation in the scale)
@@ -19,7 +19,7 @@ time_variation = (float) random value for the time. Default: 0.0
 {{- $css_vars_basename_scale := "--handwritten-scale" -}}
 
 
-{{- $text := .Get "text" -}}
+{{- $text := or (.Get "text") (.Get 0) -}}
 {{- $font := .Get "font" | default 0 -}}
 {{- $frame_time := float ((.Get "frame_time") | default .5) -}}
 {{- $time_variation := float ((.Get "time_variation") | default 0.0) -}}
