--- a/assets/css/shortcodes.scss
+++ b/assets/css/shortcodes.scss
@@ -5,6 +5,7 @@
 @import "shortcodes/spoiler.scss";
 @import "shortcodes/text_strong.scss";
 @import "shortcodes/text_boxes.scss";
+@import "shortcodes/download_file.scss";
 // @import "shortcodes/misc_effects.scss";
 
 span{
