--- a/assets/css/albums.scss
+++ b/assets/css/albums.scss
@@ -48,7 +48,14 @@ section.galleries {
 	// background-color: red;
   }
 
+article.articles-content section.galleries a.card h2{
+	font-size: 1.125rem !important;
+}
+
+// REFACTOR este nombre solo hace referencia a las cards de los albumes pequeños. Vendría bien "album-card"
 .card{
+	text-align: left;
+	color: var(--text-1) !important;
 	// flex: 0 0 200px;
 	// flex: 0 0 clamp(200px, 400px, 90vmin);
 	// flex: 0 0 clamp(200px, 400px, 20vw);
@@ -107,6 +114,7 @@ section.galleries {
 	// }
 
 	&:hover {
+		text-decoration: none !important;
 		// transition: all 200ms;
 		// transition: transform 200ms;
 		// transition: box-shadow 20000ms;
@@ -115,7 +123,7 @@ section.galleries {
 		// transform: scale(1.05);
 		div, p{
 			transition: color 200ms;
-			color: var(--hover-color);
+			color: var(--hover-color) !important;
 		}
 
 		figure{
@@ -205,6 +213,9 @@ section.featured{
 	transition-duration: .7s;
 
 
+	a{
+		text-decoration: none !important;
+	}
 	// h2{
 	h2{
 		// @extend .bloom-box-shadow-album-card;
@@ -225,7 +236,7 @@ section.featured{
 	// &:hover{
 	// TODO :active al resto de :hover (para móbiles)
 	&:hover, &:active{
-		color: var(--hover-color) !important;
+		// color: var(--hover-color) !important;
 		// h2::before{
 		h2{
 			// transition-duration: 1.2s;
@@ -235,6 +246,8 @@ section.featured{
 			padding-left: .5em;
 		}
 		p{
+			text-decoration: none !important;
+			color: var(--hover-color) !important;
 			transition-duration: .5s;
 			// padding-left: 3em;
 			padding-left: 2em;
