--- a/layouts/partials/album-card.html
+++ b/layouts/partials/album-card.html
@@ -1,9 +1,9 @@
 {{- $gallery := partial "get-gallery.html" . -}}
 {{- with $gallery -}}
-  {{ $style := "" | safeHTMLAttr}}
-  {{ if .color_hover}}
-    {{ $style = (printf "style='--bloom-box-shadow-color: %s; --main-col: %s; --bright-col: %s;'" .color_hover .color_main .color_brightest) | safeHTMLAttr }}
-  {{ end }}
+  {{- $style := "" | safeHTMLAttr -}}
+  {{- if .color_hover -}}
+    {{- $style = (printf "style='--bloom-box-shadow-color: %s; --main-col: %s; --bright-col: %s;'" .color_hover .color_main .color_brightest) | safeHTMLAttr -}}
+  {{- end -}}
   <a class="card" {{- $style -}} href="{{- .page.RelPermalink -}}" title="{{- .page.Title -}}">
     <figure style="background-color: {{- .color -}}">
       <img class="lazyload" width="{{- .thumbnail.Width -}}" height="{{- .thumbnail.Height -}}" data-src="{{- .thumbnail.RelPermalink -}}" alt="{{- .page.Title -}}" />
