--- a/assets/css/shortcodes/audio.scss
+++ b/assets/css/shortcodes/audio.scss
@@ -21,6 +21,7 @@ audio{
 	border-bottom-right-radius: 7px;
 	// border-bottom-left-radius: 5px;
 	// border-bottom-right-radius: 5px;
+	width: 100%;
 }
 
 figure.audio-player::before{
