--- a/layouts/shortcodes/audio.html
+++ b/layouts/shortcodes/audio.html
@@ -20,19 +20,7 @@ Example:
 {{< audio src="my_audio.mp3" cover="my-custom-image.png" position="50% 100%" color=#3456 autoplay=true >}}
 */}}
 
-{{ $video_url := (or (.Get 0) (.Get "url")) }}
-{{/*  {{ $controls := .Get 1 | default true }}  */}}
-{{ $muted_flag := (or (.Get 2) (.Get "muted")) | default false }}
 
-{{- /*  {{ $autoplay := "" }}
-{{ if $autoplay_flag }}
-	{{- $autoplay = "autoplay" -}}
-{{ end}}  */ -}}
-
-{{ $muted := "" }}
-{{ if $muted_flag }}
-	{{ $muted = "muted" }}
-{{ end}}
 
 {{- /*  TODO poner numeros/orden bien  */ -}}
 {{- $audio_path := (or (.Get 0) (.Get "src")) -}}
@@ -44,33 +32,27 @@ Example:
 {{- $optimize_cover_image := (or (.Get 7) (.Get "optimize")) | default true -}}
 {{- $autoplay_flag := (or (.Get 8) (.Get "autoplay")) | default false -}}
 
-{{- $autoplay := "" -}}
-{{- if $autoplay_flag -}}
-	{{- $autoplay = "autoplay" -}}
-{{- end -}}
-
-
 {{- $audio_resource := .Page.Resources.Get $audio_path -}}
 {{- $cover_resource := .Page.Resources.Get $cover_path -}}
 {{- if and (not $cover_resource) $cover_path -}}
 	{{- warnf "Audio shortcode: Cover ('%s') not found at '%s' with Title '%s'" $cover_path .Page.Path .Page.Name -}}
 {{- end -}}
 {{- $audio_name_without_extension := index (split $audio_resource.Name ".") 0 -}}
-{{- /*  {{- $cover_resource_extension := $cover_resource.MediaType.FirstSuffix.Suffix -}}  */ -}}
+
 {{- $title := (or (.Get 1) (.Get "title")) | default ($audio_name_without_extension | title) -}}
 
+{{- $autoplay := "" -}}
+{{- if $autoplay_flag -}}
+	{{- $autoplay = "autoplay" -}}
+{{- end -}}
+
 {{- /*  FINDING THE COVER DYNAMICALLY BY IT HAVING THE SAME NAME AS THE AUDIO FILE  */ -}}
-{{- /*  {{ $audio_name_without_extension := replace $audio_resource.Name (printf ".%s" $audio_resource.MediaType.SubType) "" }}  */ -}}
-{{- /*  {{- $cover_resource := .Page.Resources.GetMatch $audio_resource.Name -}}  */ -}}
-
-
 {{- if not $cover_resource -}}
 	{{- $images := .Page.Resources.ByType "image" -}}
 	{{- $name_match_string := printf "*%s*" $audio_name_without_extension -}}
 	{{- $cover_resource = $images.GetMatch $name_match_string -}}
 {{- end -}}
-
-
+{{- /*  PREVIOUS approach  */ -}}
 {{- /*  {{- $matched_cover := "" -}}
 {{- if not $cover_resource -}}
 	{{- range .Page.Resources.ByType "image" -}}
@@ -89,11 +71,7 @@ Example:
 {{- end -}}  */ -}}
 
 
-
-{{- /*  {{- $cover_resource = $cover_resource.Filter (images.GaussianBlur 10) -}}  */ -}}
 {{- /*  {{- $cover_resource = $cover_resource.Filter (images.Saturation -100) -}}  */ -}}
-{{- /*  {{- $cover_resource = $cover_resource.Filter (images.Process "fit 1000x1000") -}}  */ -}}
-
 {{- if $optimize_cover_image -}}
 	{{- /*  {{- $cover_resource = $cover_resource.Filter (images.Process "fit 500x500") -}}  */ -}}
 	{{- $cover_resource = $cover_resource.Filter (images.Process "fit 250x250") -}}
@@ -107,29 +85,12 @@ Example:
 	{{- end -}}
 {{- end -}}
 
-
-{{- /*  <p>{{$cover_resource.MediaType.FirstSuffix.Suffix}}</p>  */ -}}
-{{- /*  <p>{{$cover_resource.MediaType.SubType}}</p>  */ -}}
-{{- /*  {{- $cover_resource = $cover_resource.Filter (images.Process "fit 5x5") -}}  */ -}}
-
-{{- /*  <pre>{{$audio_resource.Name}}</pre>  */ -}}
-{{- /*  <pre>{{$audio_name_without_extension}}</pre>  */ -}}
-{{- /*  <pre>{{$audio_resource.Title}}</pre>  */ -}}
-{{- /*  <pre>{{$audio_resource}}</pre>  */ -}}
-{{- /*  <pre>a {{$audio_name_without_extension}}</pre>  */ -}}
-{{- /*  <pre>a {{$audio_resource.MediaType}}</pre>  */ -}}
-
 {{- $border_color := "" -}}
 {{- if $cover_resource -}}
 	{{- $predominant_color := index $cover_resource.Colors 0 -}}
 	{{- $brightest_color := index (sort $cover_resource.Colors "Luminance" "desc") 0 -}}
-	{{- /*  {{- $bright_colors := sort $cover_resource.Colors "Luminance" "desc" -}}  */ -}}
-	{{- /*  {{- $brightest_color := index $bright_colors 0 -}}  */ -}}
 
-	{{- /*  {{- $border_color := $brightest_color -}}  */ -}}
-	{{- /*  {{- $border_color := $predominant_color -}}  */ -}}
 	{{- $border_color = printf "color-mix(in srgb, %s 50%%, %s 50%%)" $brightest_color $predominant_color -}}
-
 {{- end -}}
 
 {{- if $color_manual -}}
