error message and text align

--- a/assets/css/shortcodes/audio.scss
+++ b/assets/css/shortcodes/audio.scss
@@ -108,6 +108,9 @@ figure.audio-player{
 
 	.audio-info{
 		padding-top: 15px;
+		h1,h2{
+			text-align: left;
+		}
 		h1{
 			font-size: 1em;
 			// text-shadow: 2px 2px 2px #CE5937;
